use Boolean.valueOf() instead of new Boolean